--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "lucide-react": "^0.454.0",
     "next": "15.2.4",
     "next-themes": "^0.4.4",
+    "nodemailer": "^6.9.8",
     "react": "^19",
     "react-day-picker": "9.8.0",
     "react-dom": "^19",
@@ -65,6 +66,7 @@
   },
   "devDependencies": {
     "@types/node": "^22",
+    "@types/nodemailer": "^6.4.14",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "postcss": "^8.5",
